--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "riot-lol-api": "^4.3.4"
   },
   "devDependencies": {
     "eslint": "8.4.1",
