--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "riot-lol-api": "^4.3.4"
+    "riot-lol-api": "^4.3.4",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.4.1",
